--- a/work/src/main/resources/static/index.html
+++ b/work/src/main/resources/static/index.html
@@ -39,8 +39,7 @@
    <body>
       <!-- banner bg main start -->
       <div class="banner_bg_main">
-         <!-- header top section start -->
-          <!-- header top section start -->
+
          <!-- logo section start -->
          <div class="logo_section">
             <div class="container">
@@ -60,7 +59,7 @@
                   <div id="mySidenav" class="sidenav">
                      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                      <a href="index.html">Home</a>
-                     <a href="fashion.html">Fashion</a>
+                     <a href="addproduct.html">Fashion</a>
 
 
                   </div>
