--- a/work/src/main/resources/static/admin.html
+++ b/work/src/main/resources/static/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +23,21 @@
 
     <button type="submit">Upload Product</button>
 </form>
+
+<h1>Products for Sale</h1>
+<div>
+    <ul>
+        <li th:each="product : ${products}">
+            <h2 th:text="${product.name}"></h2>
+            <img th:src="${product.image}" alt="Product Image" width="200">
+            <p th:text="${product.description}"></p>
+            <p>Price: $<span th:text="${product.price}"></span></p>
+            <p>Quantity: <span th:text="${product.quantity}"></span></p>
+        </li>
+    </ul>
+</div>
+
+
 
 </body>
 </html>
